Changes to be committed: 	modified:   components/Footer.js 	modified:   components/NavBar.js 	new file:   contexts/CartContext.js 	modified:   pages/[events]/index.js 	modified:   pages/_app.js 	modified:   pages/cart/index.js 	modified:   pages/index.js 	modified:   styles/globals.css

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -171,13 +171,54 @@ body {
 }
 
 .figure-img {
-  width: 20rem;
   height: 20rem;
   object-fit: cover;
+  width: 100%;
 }
 
+.event-img{
+  width: 25rem;
+  height: 25rem;
+  object-fit: cover;
+}
 
 .figure {
   text-align: center;
   line-height: 0;  
+}
+
+.menuItem {
+  position: relative;
+  display: inline-block;
+  width: 20rem;
+  height: 5rem;
+  line-height: 5rem;
+  overflow: hidden;
+  /* background-color: cadetblue; */
+  cursor: pointer;
+  white-space: nowrap;
+}
+
+.menuItem span {
+  position: absolute;
+  white-space: nowrap;
+  display: inline-block;
+  animation: scrollItem 4.5s linear infinite;
+}
+
+@keyframes scrollItem {
+  0% {
+      transform: translateX(0);
+  }
+  100% {
+      transform: translateX(-100%);
+  }
+}
+
+.alternate-font {
+  font-family: 'Times New Roman', serif; /* Alternate font */
+}
+
+.alternate2-font {
+  font-family: Arial, sans-serif; /* Default web font */
 }
