--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,7 @@
+/* * { */
+  /* border: 1px solid red; Change the color and size as needed */
+/* } */
+
 /* :root {
   --max-width: 1100px;
   --border-radius: 12px;
