--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,132 +1,21 @@
-/* * { */
-  /* border: 1px solid red; Change the color and size as needed */
-/* } */
-
-/* :root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
-    "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro",
-    "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
-
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
-}
-
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-}
-
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+/* * {
+  border: 1px solid red; 
 } */
 
 .background-image {
   /* Full screen background image will cover the entire viewport */
-  background: url('/img/np_file_13750.jpeg') no-repeat center center fixed; 
+  background: url('/img/IMG_7826.jpeg') no-repeat center center fixed; 
   /* Scale the background image to cover the entire container */
   background-size: cover;
   /* Set height and width if necessary, this example uses full viewport height */
   height: 100vh;
   width: 100%;
   /* Example content styling */
-  display: flex;
+  /* display: flex;
   align-items: center;
   justify-content: center;
-  color: white;
-  font-size: 2em;
+  color: white; */
 }
-
-
 
 .navbar {
   background-color: hsl(0 100% 100% / 0.4);
@@ -148,13 +37,14 @@ a {
   z-index: 1000; /* High z-index to ensure footer is above other content */
 }
 
-.navbar-item.navbar-center {
+.navbar-center {
   flex-grow: 1;
   display: flex;
   justify-content: center;
   flex-direction: column;
   align-items: center;
 }
+
 /* Media query for mobile styles */
 @media screen and (max-width: 1023px) {
   .navbar-menu .navbar-brand.is-absolute-centered {
@@ -175,9 +65,11 @@ body {
 }
 
 .figure-img {
-  height: 20rem;
+  /* height: 100%; */
   object-fit: cover;
+  height: auto;
   width: 100%;
+  /* transition: transform 0.3s ease; */
 }
 
 .event-img{
@@ -207,7 +99,7 @@ body {
   position: absolute;
   white-space: nowrap;
   display: inline-block;
-  animation: scrollItem 4.5s linear infinite;
+  animation: scrollItem 8s linear infinite;
 }
 
 @keyframes scrollItem {
@@ -225,4 +117,35 @@ body {
 
 .alternate2-font {
   font-family: Arial, sans-serif; /* Default web font */
+}
+
+.timer-dashed {
+  border: 2px dashed #4f4f4f; /* Adjust color as needed */
+  padding: 10px;
+  display: inline-block;
+  margin: 5px;
+  border-radius: 3px; /* Adds rounded corners. Adjust radius as needed */
+}
+
+.notification-dot {
+  position: absolute;
+  top: -5px;    /* Adjust this value as needed to move the dot up or down */
+  left: -5px;   /* Adjust this value as needed to move the dot left or right */
+  width: 10px;  /* Diameter of the dot */
+  height: 10px; /* Diameter of the dot */
+  background-color: red;
+  border-radius: 50%; /* Makes the dot circular */
+  border: 2px solid white; /* Optional, adds a white border around the dot */
+}
+
+.scroll-container {
+  overflow-x: auto;
+  white-space: nowrap;
+}
+
+.event-item {
+  display: inline-block;
+  width: 300px; 
+  margin-right: 10px;
+  vertical-align: top;
 }
