--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,7 +4,7 @@
 
 .background-image {
   /* Full screen background image will cover the entire viewport */
-  background: url('/img/IMG_7826.jpeg') no-repeat center center fixed; 
+  background: url('/img/website landing page.png') no-repeat center center fixed; 
   /* Scale the background image to cover the entire container */
   background-size: cover;
   /* Set height and width if necessary, this example uses full viewport height */
@@ -17,14 +17,15 @@
   color: white; */
 }
 
-.navbar {
+
+.logoNav {
   background-color: hsl(0 100% 100% / 0.4);
-  position: fixed; /* Fixed positioning to keep navbar at the top of the viewport */
-  width: 100%; /* Ensure the navbar extends the full width of the viewport */
-  top: 0; /* Align the navbar at the top of the viewport */
-  left: 0; /* Align the navbar to the left of the viewport */
-  background-color: transparent !important; /* Optional: make background transparent */
-  z-index: 1000; /* High z-index to ensure navbar is above other content */
+  position: fixed; 
+  width: 100%; 
+  top: 0;
+  left: 0; 
+  background-color: transparent !important; 
+  z-index: 1000; 
 }
 
 .footer {
@@ -46,12 +47,12 @@
 }
 
 /* Media query for mobile styles */
-@media screen and (max-width: 1023px) {
+/* @media screen and (max-width: 1023px) {
   .navbar-menu .navbar-brand.is-absolute-centered {
     position: static;
     transform: none;
   }
-}
+} */
 
 body {
   font-family: "Special Elite", system-ui;
@@ -84,22 +85,19 @@ body {
 }
 
 .menuItem {
-  position: relative;
+  /* position: absolute; */
   display: inline-block;
-  width: 20rem;
-  height: 5rem;
-  line-height: 5rem;
+  width: 100%;
+  height: 100%;
+  /* line-height: 5rem; */
   overflow: hidden;
   /* background-color: cadetblue; */
   cursor: pointer;
   white-space: nowrap;
-}
-
-.menuItem span {
-  position: absolute;
+  /* position: absolute; */
   white-space: nowrap;
-  display: inline-block;
-  animation: scrollItem 8s linear infinite;
+
+  animation: scrollItem 5s linear infinite;
 }
 
 @keyframes scrollItem {
@@ -141,6 +139,7 @@ body {
 .scroll-container {
   overflow-x: auto;
   white-space: nowrap;
+  width: 600px;
 }
 
 .event-item {
